--- a/anisul_islam_ts/index.html
+++ b/anisul_islam_ts/index.html
@@ -6,6 +6,7 @@
     <title>TypeScript Practice</title>
 </head>
 <body>
+    <h1>TypeScript Practice</h1>
     <script src="./output/js/main.js"></script>
 </body>
 </html>
