dom manifulation ts live practice

--- a/dom_manipulation_ts/public/index.html
+++ b/dom_manipulation_ts/public/index.html
@@ -7,7 +7,34 @@
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>DOm Manipulation TypeScript</h1>
+    <h1>Dom Manipulation TypeScript</h1>
+
+
+    <form>
+        <div>
+            <label for="user_name">UserName:</label>
+            <input type="text" name="user_name" id="user_name">
+        </div> <br>
+        <div>
+            <label for="user_email">UserName:</label>
+            <input type="text" name="user_email" id="user_email">
+        </div> <br>
+        <div>
+            <label for="user_country">Country:</label>
+            <select name="country" id="country">
+                <option value="Bangladesh">Bangladesh</option>
+                <option value="Afghanistan">Afghanistan</option>
+                <option value="Pakistan">Pakistan</option>
+            </select>
+        </div> <br>
+        <div>
+            <label for="feedback">Feedback:</label>
+            <textarea name="user_feedback" id="user_feedback" rows="5" cols="15"></textarea>
+        </div> <br>
+        <div>
+            <button type="submit">Submit</button>
+        </div>
+    </form>
 
     <script src="../output/main.js"></script>
 </body>
